utils/kubernetes/pluto-dashboard-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: pluto-dashboard-ing
  namespace: pluto
spec:
  rules:
    - host: pluto.exeample.com
      http:
        paths:
          - backend:
              serviceName: pluto-dashboard-svc
              servicePort: 8080
            path: /
